PM任职认证增加2017年下半年专项培训的八门课程PPT

--- a/src/main/webapp/service9.html
+++ b/src/main/webapp/service9.html
@@ -747,33 +747,49 @@
 												<caption></caption>
 												<thead>
 												<tr>
-													<th>专项培训</th>
-													<th>答辩赋能</th>													
+													<th colspan = "2" style="text-align:center" width= "70%">专项培训</th>
+													<th style="text-align:center" width= "30%">答辩赋能</th>													
 												</tr></thead>
 												<tbody>
 												<tr>
-													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E6%8A%8A%E6%97%B6%E9%97%B4%E5%BD%93%E5%81%9A%E6%9C%8B%E5%8F%8B">把时间当做朋友</a></td>
+													<td width= "35%"><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E6%8A%8A%E6%97%B6%E9%97%B4%E5%BD%93%E5%81%9A%E6%9C%8B%E5%8F%8B">把时间当做朋友</a></td>
+													<td width= "35%"><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86%E6%A6%82%E8%BF%B0">项目管理概述</a></td>
 													<td></td>
 												</tr>
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E8%8C%83%E5%9B%B4%E7%AE%A1%E7%90%86">范围管理</a></td>
-													<td></td>																										
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:pm%E8%A7%92%E8%89%B2%E8%AE%A4%E7%9F%A5">PM角色认知</a></td>
+													<td></td>														
 												</tr>
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E9%A3%8E%E9%99%A9%E7%AE%A1%E7%90%86">风险管理</a></td>
-													<td></td>																										
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E7%BB%A9%E6%95%88%E7%AE%A1%E7%90%86">绩效管理</a></td>
+													<td></td>	
 												</tr>
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E5%B9%B2%E7%B3%BB%E4%BA%BA%E7%AE%A1%E7%90%86">干系人管理</a></td>
-													<td></td>																										
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E8%B4%A8%E9%87%8F%E7%AD%96%E5%88%92">质量策划</a></td>
+													<td></td>	
 												</tr>
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E6%B2%9F%E9%80%9A%E7%AE%A1%E7%90%86">沟通管理</a></td>
-													<td></td>																										
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:review%E5%8F%8A%E5%AE%9E%E8%B7%B5">Review及实践</a></td>
+													<td></td>	
 												</tr>
 												<tr>
 													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E8%B4%A8%E9%87%8F%E7%AE%A1%E7%90%86">质量管理</a></td>
-													<td></td>																										
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E9%A1%B9%E7%9B%AE%E8%AE%A1%E5%88%92%E4%B8%8E%E6%8E%A7%E5%88%B6">项目计划与控制</a></td>
+													<td></td>	
+												</tr>
+												<tr>
+													<td></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E9%9C%80%E6%B1%82%E7%AE%A1%E7%90%86">需求管理</a></td>
+													<td></td>	
+												</tr>
+												<tr>
+													<td></td>
+													<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E8%B4%A8%E9%87%8F:pm%E4%BB%BB%E8%81%8C%E8%AE%A4%E8%AF%81:%E4%B8%93%E9%A1%B9%E5%9F%B9%E8%AE%AD:%E6%88%90%E6%9C%AC%E7%AE%A1%E7%90%86%E5%8F%8A%E9%A1%B9%E7%9B%AE%E6%A0%B8%E7%AE%97">成本管理与项目核算</a></td>
+													<td></td>	
 												</tr>
 												</tbody>
 											</table>
