--- a/src/main/webapp/activity.html
+++ b/src/main/webapp/activity.html
@@ -312,7 +312,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-4-label">敏捷经验交流</h4>
+												<h4 class="modal-title" id="project-4-label">Agile Experience Communication</h4>
 											</div>
 											<div class="modal-body">
 												<h3>Activity Description</h3>
