--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -107,12 +107,12 @@ a.btn.btn-default.btn-block {
 											<li class="active"><a href="service1.html">Technology </a></li>
 											<li><a href="service2.html">Domain knowledge</a></li>
 											<li><a href="service3.html">Agile</a></li>
-											<li><a href="service4.html">Architecture</a></li>
-											<li><a href="">Innovation</a></li>
+											<!--<li><a href="service4.html">Architecture</a></li>-->
+											<!--<li><a href="">Innovation</a></li>-->
 											<li><a href="service6.html">Management</a></li>
 											<li><a href="service7.html">Presale</a></li>
 											<li><a href="service8.html">Internationalization</a></li>
-											<li><a href="service9.html">Qualit</a></li>
+											<li><a href="service9.html">Quality</a></li>
 										</ul>
 									</div>
 
@@ -380,75 +380,75 @@ a.btn.btn-default.btn-block {
 									<div class="panel-body">
 										<div class="row">
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\11.png" width="170"
+												<a href="http://dojotoolkit.org/" target="_blank"><img src="images\11.png" width="170"
 													height="70" border="边框"></a>
 											</div>
 											<div class="col-md-2">
-												<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:%E5%9F%BA%E7%A1%80%E6%8A%80%E6%9C%AF:%E5%89%8D%E7%AB%AF:html:%E9%A6%96%E9%A1%B5"
+												<a href="https://www.w3.org/html/"
 												target="_blank"><img src="images\12.png" width="170"
 													height="70" border="边框"></a>
 											</div>
 											<div class="col-md-2">
-												<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:%E5%9F%BA%E7%A1%80%E6%8A%80%E6%9C%AF:%E5%89%8D%E7%AB%AF:css:%E9%A6%96%E9%A1%B5"
+												<a href="https://www.w3.org/TR/CSS/"
 												target="_blank"><img src="images\13.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\14.png" width="170"
+												<a href="http://www.oracle.com/technetwork/index.html" target="_blank"><img src="images\14.png" width="170"
 													height="70" border="边框"></a>
 
 
 											</div>
 											<div class="col-md-2">
 
-												<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:spring:%E9%A6%96%E9%A1%B5"
+												<a href="http://spring.io/"
 												target="_blank"><img src="images\15.png" width="170"
 													height="70" border="边框"></a>
 
 
 											</div>
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\16.png" width="170"
+												<a href="https://www.oracle.com/index.html" target="_blank"><img src="images\16.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
 
-												<a target="_blank"><img src="images\17.png" width="170"
+												<a href="https://jenkins.io/" target="_blank"><img src="images\17.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
-												<a href="" target="_blank"><img src="images\18.png"
+												<a href="https://www.activiti.org/" target="_blank"><img src="images\18.png"
 													width="170" height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\19.png" width="170"
+												<a target="_blank" href="http://www.apache.org/"><img src="images\19.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\110.png" width="170"
+												<a target="_blank" href="https://cloudfoundry.org/"><img src="images\110.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
-												<a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%8A%80%E6%9C%AF%E6%B8%A0%E9%81%93:%E5%9F%BA%E7%A1%80%E6%8A%80%E6%9C%AF:%E5%89%8D%E7%AB%AF:js:%E9%A6%96%E9%A1%B5"
+												<a href="https://www.javascript.com/"
 												target="_blank"><img src="images\js.png" width="170"
 													height="70" border="边框"></a>
 
 											</div>
 
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\jquery_logo.png"
+												<a href="http://jquery.com/" target="_blank"><img src="images\jquery_logo.png"
 													width="170" height="70" border="边框"></a>
 
 											</div>
 											<div class="col-md-2">
-												<a target="_blank"><img src="images\hibernate.jpg"
+												<a target="_blank" href="http://hibernate.org/"><img src="images\hibernate.jpg"
 													width="170" height="70" border="边框"></a>
 
 											</div>
@@ -878,7 +878,7 @@ a.btn.btn-default.btn-block {
 														<td>RDz</td>
 														<td>张文宇(Wellry Zhang)</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 
@@ -886,42 +886,42 @@ a.btn.btn-default.btn-block {
 														<td>Endevor/CAV/FM</td>
 														<td>赖志华(Andy Lai)</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 													<tr>
 														<td>C:D</td>
 														<td>吕双鹏(Steph Lv）</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 													<tr>
 														<td>CO</td>
 														<td>王兆亢(Kenny Wang)</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 													<tr>
 														<td>TWS</td>
 														<td>王晓娟(Betty Wang)</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 													<tr>
 														<td>JIRA</td>
 														<td>屈建华(Hope Qu）</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 													<tr>
 														<td>GSI/R2ds</td>
 														<td>郭雯(Vivian Guo)</td>
 														<td>OBS</td>
-														<td>1个小时</td>
+														<td>one hour</td>
 														<td></td>
 													</tr>
 
@@ -957,118 +957,122 @@ a.btn.btn-default.btn-block {
 												</thead>
 												<tbody>
 													<tr>
-														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5" target="_blank">软件测试及软件测试缺陷的基本概念</a></td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5" target="_blank">
+														Basic concepts of software testing and software testing defects</a></td>
 
 														<td>陶爱华</td>
 														<td></td>
-														<td>1个小时</td>
-														<td>1)为什么要进行软件测试</br> 2)软件开发的模型</br> 3)软件测试模型
+														<td>an hour</td>
+														<td>1)Why should we need testing?</br> 2)Software development model</br> 3)Software testing model
 														</td>
 													</tr>
 
 													<tr>
-														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E6%96%B9%E6%B3%95" target="_blank">软件测试的方法</a></td>
+														<td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%9A%84%E6%96%B9%E6%B3%95" target="_blank">
+														Method of software testing</a></td>
 														<td>陶爱华</td>
 														<td></td>
-														<td>1个小时</td>
-														<td>1)软件测试的分类</br> 2)功能测试的方法
+														<td>an hour</td>
+														<td>1)Classification of software tests</br> 2)Methods of functional testing
 														</td>
 													</tr>
 													<tr>
-													    <td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%94%A8%E7%9A%84%E8%AE%BE%E8%AE%A1%E5%92%8C%E7%BC%BA%E9%99%B7" target="_blank">软件测试用的设计和缺陷</a></td>
+													    <td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%BD%AF%E4%BB%B6%E6%B5%8B%E8%AF%95%E7%94%A8%E7%9A%84%E8%AE%BE%E8%AE%A1%E5%92%8C%E7%BC%BA%E9%99%B7" target="_blank">
+														Design and defect of software testing</a></td>
 														<td>陶爱华</td>
 														<td></td>
-														<td>1个小时</td>
-														<td>1)软件测试的基本过程</br> 2)软件测试设计技术</br> 3)软件的缺陷管理
+														<td>an hour</td>
+														<td>1)The basic process of software testing</br> 2)Software test design techniques</br> 3)Software defect management
 														</td>
 													</tr>
 													<tr>
-													    <td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5" target="_blank">自动化测试的基本概念</a></td>
+													    <td><a href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E6%B5%8B%E8%AF%95%E6%B8%A0%E9%81%93:%E5%8A%9F%E8%83%BD%E6%B5%8B%E8%AF%95:%E8%87%AA%E5%8A%A8%E5%8C%96%E6%B5%8B%E8%AF%95%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5" target="_blank">
+														Basic concepts of automated testing</a></td>
 														<td>陶爱华</td>
 														<td></td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>Java面向对象编程的基本概念</td>
+														<td>Basic concept of Java</td>
 														<td>毛贵锋</td>
 														<td></td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>Java构造函数、多态性</td>
+														<td>Java Encapsulation inherited polymorphism</td>
 														<td>程文博</td>
 														<td></td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>Java 接口、抽象类和类</td>
+														<td>Java interface abstract class</td>
 														<td>董晖</td>
 														<td></td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>Java 集合和枚举</td>
+														<td>Java List and enum</td>
 														<td>杨志奇</td>
 														<td></td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>Selenium基础概念</td>
+														<td>Selenium</td>
 														<td>刘文杰</td>
 														<td>财富管理</td>
-														<td>1个小时</td>
-														<td>1)Selenium IDE和Webdriver安装</br> 2)Selenium IDE的使用</br>
-															3)Selenium常用命令</br> 4)WebDriver的使用
+														<td>an hour</td>
+														<td>1)Selenium IDE and Webdriver</br> 2)Selenium IDE</br>
+															3)Selenium common command </br> 4)WebDriver
 														</td>
 													</tr>
 													<tr>
-														<td>xPath的使用</td>
+														<td>xPath</td>
 														<td>刘文杰</td>
 														<td>财富管理</td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>HSBC目前的几种自动化测试框架介绍</td>
+														<td>Introduction of HSBC Testing framework </td>
 														<td>刘文杰</td>
 														<td>财富管理</td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>性能测试简介</td>
+														<td>Performance test profile</td>
 														<td></td>
 														<td>财富管理</td>
-														<td>1个小时</td>
+														<td>an hour</td>
 														<td></td>
 													</tr>
 													<tr>
-														<td>性能测试的实践</td>
+														<td>Practice of performance testing</td>
 														<td></td>
 														<td>财富管理</td>
-														<td>1个小时</td>
-														<td>1)性能测试的设计</br> 2)性能测试的分析
+														<td>an hour</td>
+														<td>1)Performance test design</br> 2)Analysis of performance tests
 														</td>
 													</tr>
 													<tr>
-														<td>白盒测试基础概念和方法</td>
+														<td>White box testing basic concepts and methods</td>
 														<td></td>
 														<td></td>
-														<td>1个小时</td>
-														<td>1)静态测试方法</br> 2)逻辑覆盖方法</br> 3)数据流分析
+														<td>an hour</td>
+														<td>1)static testing method</br> 2)Logical overlay method</br> 3)Data-flow analysis
 														</td>
 													</tr>
 													<tr>
-														<td>单元测试概念和方法</td>
+														<td>Unit test concepts and methods</td>
 														<td></td>
 														<td></td>
-														<td>1个小时</td>
-														<td>1)单元测试房方法</br> 2)插桩技术
+														<td>an hour</td>
+														<td>1)Unit test method</br> 2)software stub technology
 														</td>
 													</tr>
 												</tbody>
@@ -1106,7 +1110,7 @@ a.btn.btn-default.btn-block {
 													<td>JCL refresh</td>
 													<td>方滨长(Borg Fang)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 
@@ -1115,56 +1119,56 @@ a.btn.btn-default.btn-block {
 
 													<td>董鹏岗(Penn Dong)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>COBOL refresh</td>
 													<td>祁瑞锋(Rifling Qi)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>COBOL advanced</td>
 													<td>严锡锋(Austin Yan)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>DB2 refresh</td>
 													<td>余志浩(Bruce Yu)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>DB2 advanced</td>
 													<td>史绪成(Harry Shi)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>CICS refresh</td>
 													<td>张文宇(Wellry Zhang)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>CICS advanced</td>
 													<td>王文超(Windy Wang)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 												<tr>
 													<td>Q/VSAM</td>
 													<td>方滨长(Borg Fang)</td>
 													<td>OBS</td>
-													<td>1个小时</td>
+													<td>an hour</td>
 													<td></td>
 												</tr>
 
