--- a/src/main/webapp/service2.html
+++ b/src/main/webapp/service2.html
@@ -99,8 +99,8 @@
 												<li><a href="service1.html">Technology</a></li>
 												<li class="active"><a href="service2.html">Domain knowledge</a></li>
 												<li><a href="service3.html">Agile</a></li>
-												<li><a href="service4.html">Architecture</a></li>
-												<li><a href="">Innovation</a></li>
+												<!--<li><a href="service4.html">Architecture</a></li>-->
+												<!--<li><a href="">Innovation</a></li>-->
 												<li><a href="service6.html">Managemant</a></li>
 												<li><a href="service7.html">Pre-sales</a></li>
 												<li><a href="service8.html">Internationalization</a></li>
@@ -346,7 +346,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div><!--
 							<div class="panel panel-default">
 								<div class="panel-heading" role="tab" id="trainingHeading2">
 									<h4 class="panel-title">
@@ -413,7 +413,7 @@
 									</div>
 								</div>
 							</div>
-						</div>
+						</div>-->
 					</div>
 			</div>
 		</div>
