--- a/src/main/webapp/service4.html
+++ b/src/main/webapp/service4.html
@@ -96,11 +96,11 @@
 											<ul class="nav navbar-nav navbar-right">
 												<li><a href="index.html">Home</a></li>
 												<li><a href="">|</a></li>
-												<li><a href="service1.html">Technologe</a></li>
+												<li><a href="service1.html">Technology</a></li>
 												<li><a href="service2.html">Business</a></li>
 												<li><a href="service3.html">Agile</a></li>
-												<li class="active"><a href="service4.html">Architecture</a></li>
-												<li><a href="">Innovation</a></li>
+												<!--<li class="active"><a href="service4.html">Architecture</a></li>-->
+												<!--<li><a href="">Innovation</a></li>-->
 												<li><a href="service6.html">Management</a></li>
 												<li><a href="service7.html">Pre-sales</a></li>
 												<li><a href="service8.html">Internationalization</a></li>
