--- a/src/main/webapp/service5.html
+++ b/src/main/webapp/service5.html
@@ -5,7 +5,7 @@
 <!--<![endif]-->
 	<head>
 		<meta charset="utf-8">
-		<title>能力中心-服务中心</title>
+		<title>Capability Center - Service</title>
 		<meta name="description" content="Worthy a Bootstrap-based, Responsive HTML5 Template">
 		<meta name="author" content="htmlcoder.me">
 
@@ -57,8 +57,8 @@
 
 							<!-- name-and-slogan -->
 							<div class="site-name-and-slogan smooth-scroll">
-								<div class="site-name"><a href="#banner">能力与创新中心</a></div>
-								<div class="site-slogan">改善员工的能力和生活 </div>
+								<div class="site-name"><a href="#banner">Capability Center</a></div>
+								<div class="site-slogan">Make employee's ability and life better </div>
 							</div>
 
 						</div>
@@ -93,18 +93,17 @@
 										<!-- Collect the nav links, forms, and other content for toggling -->
 										<div class="collapse navbar-collapse scrollspy smooth-scroll" id="navbar-collapse-1">
 											<ul class="nav navbar-nav navbar-right">
-												<li><a href="index.html">主页</a></li>
-
+												<li><a href="index.html">Home</a></li>
 												<li><a href="">|</a></li>
-												<li><a href="service1.html">技术</a></li>
-												<li><a href="service2.html">业务</a></li>
-												<li><a href="service3.html">敏捷</a></li>
-												<li><a href="service4.html">架构</a></li>
-												<li class="active"><a href="service5.html">创新</a></li>
-												<li><a href="service6.html">管理</a></li>
-												<li><a href="service7.html">售前</a></li>
-												<li><a href="service8.html">国际化</a></li>
-												<li><a href="service9.html">质量</a></li>
+												<li><a href="service1.html">Technology</a></li>
+												<li><a href="service2.html">Business</a></li>
+												<li><a href="service3.html">Agile</a></li>
+												<!--<li class="active"><a href="service4.html">Architecture</a></li>-->
+												<!--<li><a href="">Innovation</a></li>-->
+												<li><a href="service6.html">Management</a></li>
+												<li><a href="service7.html">Pre-sales</a></li>
+												<li><a href="service8.html">Internationalization</a></li>
+                        <li><a href="service9.html">Quality</a></li>
 											</ul>
 										</div>
 
