--- a/src/main/webapp/service7.html
+++ b/src/main/webapp/service7.html
@@ -115,12 +115,12 @@
 											<li><a href="service1.html">Technology</a></li>
 											<li><a href="service2.html">Domain knowledge</a></li>
 											<li><a href="service3.html">Agile</a></li>
-											<li><a href="service4.html">Architecture</a></li>
-											<li><a href="">Innovation</a></li>
+											<!--<li><a href="service4.html">Architecture</a></li>-->
+											<!--<li><a href="">Innovation</a></li>-->
 											<li><a href="service6.html">Management</a></li>
 											<li class="active"><a href="service7.html">Pre-sales</a></li>
 											<li><a href="service8.html">Internationalization</a></li>
-											<li><a href="service9.html">Qualit</a></li>
+											<li><a href="service9.html">Quality</a></li>
 										</ul>
 							</nav>
 							<!-- navbar end -->
