--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -109,8 +109,8 @@
                                         <!-- <li><a href="#portfolio">Portfolio</a></li> -->
 
 
-                                        <li><a href="../SpiderNet/service/manage/loginPage.html">P-SN</a></li>
-                                        <li><a href="http://xa.chinasoftosg.com/lms/login.html">Skill appraisal</a></li>
+                                        <li><a href="../SpiderNet/service/manage/loginPage.html">E-Learnning</a></li>
+                                        <!--<li><a href="http://xa.chinasoftosg.com/lms/login.html">Skill appraisal</a></li>-->
 
 
                                         <li><a href="knowledge.html">Knowledge Map</a></li>
