--- a/src/main/webapp/service8.html
+++ b/src/main/webapp/service8.html
@@ -103,8 +103,8 @@
 											<li><a href="service1.html">Technology</a></li>
 											<li><a href="service2.html">Domain knowledge</a></li>
 											<li><a href="service3.html">Agile</a></li>
-											<li><a href="service4.html">Architecture</a></li>
-											<li><a href="">Innovetion</a></li>
+											<!--<li><a href="service4.html">Architecture</a></li>-->
+											<!--<li><a href="">Innovetion</a></li>-->
 											<li><a href="service6.html">Management</a></li>
 											<li><a href="service7.html">Pre-sales</a></li>
 											<li class="active"><a href="service8.html">Internationalization</a></li>
