--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,7 +114,7 @@
 
 
                                         <li><a href="knowledge.html">Knowledge Map</a></li>
-                                        <li><a href="../p-vbs/login.html">P-VBS</a></li>
+                                        <!--<li><a href="../p-vbs/login.html">P-VBS</a></li>-->
                                     </ul>
                                 </div>
 
