--- a/src/main/webapp/service9.html
+++ b/src/main/webapp/service9.html
@@ -16,6 +16,11 @@
 <link href="css/animations.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 <link href="css/custom.css" rel="stylesheet">
+<style>.header-left.clearfix {
+    width: 300px;
+    margin-top: 12%;
+}
+</style>
 </head>
 
 <body class="no-trans"
