--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -1065,15 +1065,12 @@
 									<div class="col-md-3">
 										<div class="feature-center animate-box"
 											data-animate-effect="fadeInUp">
-											<span class="icon"> <i class="icon-eye"></i>
-											</span>
-											<h3>Architect</h3>
 											<p>
 											<table class="table table-condensed">
 												<tbody>
 													<tr>
-														<td><a
-															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E8%BF%90%E8%90%A5%E7%AE%A1%E7%90%86:1.%E5%85%A8%E9%9D%A2%E9%A2%84%E7%AE%97%E7%AE%A1%E7%90%86">Comprehensive budget management</span></a></td>
+														<td style="border-top:0px"><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:architect">Architect</span></a></td>
 													</tr>
 													
 
@@ -1087,15 +1084,12 @@
 									<div class="col-md-3">
 										<div class="feature-center animate-box"
 											data-animate-effect="fadeInUp">
-											<span class="icon"> <i class="icon-eye"></i>
-											</span>
-											<h3>Business Analyst</h3>
 											<p>
 											<table class="table table-condensed">
 												<tbody>
 													<tr>
-														<td><a
-															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E4%BA%BA%E5%8A%9B%E8%B5%84%E6%BA%90%E7%AE%A1%E7%90%86:1.ehs%E7%AE%A1%E7%90%86%E7%9F%A5%E8%AF%86">EHS management knowledge</span></a></td>
+														<td style="border-top:0px"><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:business_analyst">Business Analyst</span></a></td>
 													</tr>
 												</tbody>
 											</table>
@@ -1107,15 +1101,12 @@
 									<div class="col-md-3">
 										<div class="feature-center animate-box"
 											data-animate-effect="fadeInUp">
-											<span class="icon"> <i class="icon-eye"></i>
-											</span>
-											<h3>Project Manager</h3>
 											<p>
 											<table class="table table-condensed">
 												<tbody>
 													<tr>
-														<td><a
-															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:%E7%BB%84%E7%BB%87%E7%AE%A1%E7%90%86:%E4%BA%A4%E4%BB%98%E9%83%A8%E7%BB%8F%E7%90%86%E5%85%A5%E9%97%A8%E5%9F%B9%E8%AE%AD">DM induction training</span></a></td>
+														<td style="border-top:0px"><a
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:project_manager">Project Manager</span></a></td>
 													</tr>
 												</tbody>
 											</table>
@@ -1145,7 +1136,7 @@
 	<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
 	<noscript><a href="//www.51.la/?19148250" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" /></a></noscript>
 	<script language="javascript" type="text/javascript"
-			src="//quote.users.51.la/?id=19148250&amp;mb=网站访问+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
+			src="//quote.users.51.la/?id=19148250&amp;mb=Amount of access+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
 	</script>
 	<!--网站流量统计结束-->
 			<!-- JavaScript files placed at the end of the document so the pages load faster
