--- a/src/main/webapp/service1.html
+++ b/src/main/webapp/service1.html
@@ -110,7 +110,7 @@ a.btn.btn-default.btn-block {
 											<!--<li><a href="service4.html">Architecture</a></li>-->
 											<!--<li><a href="">Innovation</a></li>-->
 											<li><a href="service6.html">Management</a></li>
-											<li><a href="service7.html">Presale</a></li>
+											<li><a href="service7.html">Pre-sales</a></li>
 											<li><a href="service8.html">Internationalization</a></li>
 											<li><a href="service9.html">Quality</a></li>
 										</ul>
