--- a/src/main/webapp/service6.html
+++ b/src/main/webapp/service6.html
@@ -179,10 +179,10 @@
 										<img src="images/management01.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-4">
 											<i class="fa fa-search-plus"></i>
-											<span>Operation Management Training</span>
+											<span>Operation Management</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">Operation Management Training</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-4">Operation Management</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-4" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
@@ -190,10 +190,10 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-4-label">Operation Management Training</h4>
+												<h4 class="modal-title" id="project-4-label">Operation Management /h4>
 											</div>
 											<div class="modal-body">
-												<h3>Operation Management Training</h3>
+												<h3>Operation Management</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;Capability center can help each functional department and delivery department for operation management knowledge precipitation, and enable to quickly apply these operation management skills.</p>
@@ -218,10 +218,10 @@
 										<img src="images/management02.jpg" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-5">
 											<i class="fa fa-search-plus"></i>
-											<span>Human Resource Management Training</span>
+											<span>Human Resource Management</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-5">Human Resource Management Training</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-5">Human Resource Management</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-5" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
@@ -229,10 +229,10 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-4-label11">Human Resource Management Training</h4>
+												<h4 class="modal-title" id="project-4-label11">Human Resource Management</h4>
 											</div>
 											<div class="modal-body">
-												<h3>Human Resource Management Training</h3>
+												<h3>Human Resource Management</h3>
 												<div class="row">
 													<div class="col-md-6">
 														<p>&nbsp;&nbsp;&nbsp;&nbsp;Organization Management Training Capability center can help each functional department and delivery department for organization  management knowledge precipitation, and enable to quickly apply these organization management skills. </p>
@@ -258,10 +258,10 @@
 										<img src="images/management03.png" alt="">
 										<a class="overlay" data-toggle="modal" data-target="#project-6">
 											<i class="fa fa-search-plus"></i>
-											<span>Organization Management Training</span>
+											<span>Organization Management</span>
 										</a>
 									</div>
-									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-6">Organization Management Training</a>
+									<a class="btn btn-default btn-block" data-toggle="modal" data-target="#project-6">Organization Management</a>
 								</div>
 								<!-- Modal -->
 								<div class="modal fade" id="project-6" tabindex="-1" role="dialog" aria-labelledby="project-4-label" aria-hidden="true">
@@ -269,7 +269,7 @@
 										<div class="modal-content">
 											<div class="modal-header">
 												<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-												<h4 class="modal-title" id="project-4-label1">Organization Management Training</h4>
+												<h4 class="modal-title" id="project-4-label1">Organization Management</h4>
 											</div>
 											<div class="modal-body Mannagement Training">
 												<h3>Organization</h3>
@@ -427,7 +427,7 @@
 								<div class="panel-heading" role="tab" id="trainingHeading6">
 									<h4 class="panel-title">
 										<a class="collapsed" data-toggle="collapse" data-parent="#trainingAccordion" href="#trainingCollapse6" aria-expanded="false" aria-controls="trainingCollapse6">
-										Organization Management Training
+										Organization Management
 										</a>
 									</h4>
 								</div>
@@ -468,7 +468,7 @@
 		<script language="javascript" type="text/javascript" src="//js.users.51.la/19148250.js"></script>
 		<noscript><a href="//www.51.la/?19148250" target="_blank"><img alt="&#x6211;&#x8981;&#x5566;&#x514D;&#x8D39;&#x7EDF;&#x8BA1;" src="//img.users.51.la/19148250.asp" style="border:none" /></a></noscript>
 		<script language="javascript" type="text/javascript"
-				src="//quote.users.51.la/?id=19148250&amp;mb=网站访问+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
+				src="//quote.users.51.la/?id=19148250&amp;mb=Amount of access+%24TLV%7Caj%7C10%7Caj%7C%7Caj%7C%7Caj%7C&amp;target=ajiang%5F51la">
 		</script>
 		<!--网站流量统计结束-->
 		<!-- JavaScript files placed at the end of the document so the pages load faster
