--- a/src/main/webapp/knowledge.html
+++ b/src/main/webapp/knowledge.html
@@ -101,7 +101,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a>|</a></li>
 											<li class="active"><a href="#a1">Business</a></li>
-											<li><a href="#a2">Architecture</a></li>
+											<li><a href="#a2">System Architect</a></li>
 											<li><a href="#a3">Technology</a></li>
 											<li><a href="#a4">Management</a></li>
 											<li><a href="#a5">Internationalization</a></li>
@@ -1070,7 +1070,7 @@
 												<tbody>
 													<tr>
 														<td style="border-top:0px"><a
-															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:architect">Architect</span></a></td>
+															href="http://pbox.chinasoftinc.com:8080/dokuwiki/doku.php?id=%E7%9F%A5%E8%AF%86%E5%BA%93:%E7%AE%A1%E7%90%86%E6%B8%A0%E9%81%93:careerpath:architect:index">Architect</span></a></td>
 													</tr>
 													
 
